--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-select-search": "^3.0.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
