--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "country-flag-icons": "^1.5.5",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.3",
     "react": "^17.0.2",
     "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
+    "react-flags-select": "^2.2.3",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.0",
     "react-select-search": "^3.0.10",
     "web-vitals": "^2.1.4"
