--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "alchemy-sdk": "^2.2.3",
     "axios": "^0.27.2",
     "country-flag-icons": "^1.5.5",
     "dotenv": "^16.0.0",
+    "ethereum-input-data-decoder": "^0.4.2",
     "ethers": "^5.5.3",
     "react": "^17.0.2",
     "react-collapse": "^5.1.1",
